# raven_ecs

./: .gitignore  CMakeLists.txt  IComponentCollection.hpp  Manager.cpp  Manager.hpp  ReadMe.md  System.hpp  main.cpp
benchmark/prj/: benchmark_config.lua
benchmark/src/: App.cpp  MovementBehavior.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  Transform.hpp
docs/: ECS_Overview.md  TestsProjectConfig.md
ecs/: ComponentCollectionImpl.hpp  ComponentHandle.hpp  EntitiesCollection.cpp  EntitiesCollection.hpp  Entity.hpp  IComponentCollection.hpp  Manager.cpp  Manager.hpp  System.hpp
prj/: build_config.lua  premake5.lua  project_config.lua
src/ecs/: ComponentCollectionImpl.hpp  ComponentHandle.cpp  ComponentHandle.hpp  ECSApiDef.hpp  EntitiesCollection.cpp  EntitiesCollection.hpp  Entity.cpp  Entity.hpp  EntityHandle.cpp  EntityHandle.hpp  EntityHierarchyManager.cpp  EntityHierarchyManager.hpp  IComponentCollection.hpp  IComponentCollectionCallback.hpp  ILifecycleCallback.hpp  Manager.cpp  Manager.hpp  System.cpp  System.hpp  TypeAliases.hpp
src/ecs/cache/: ComponentsTuple.cpp  ComponentsTuple.hpp  (+4 more)
src/function/: FunctionFactory.hpp  FunctionWrapper.hpp
src/prj/: project_config.lua
src/storage/: MemoryPool.hpp
test/: App.cpp  App.hpp  EntityChildrenTest.cpp  EntityCollectionTest.cpp  MemoryPoolTest.cpp  MovementSystem.cpp  MyTest.cpp  RenderSystem.cpp  RenderSystem.hpp  SpriteRender.hpp  StaticMesh.hpp  TestEntitiesCollection.hpp  TestsEntry.cpp  UISystem.hpp  main.cpp
test/prj/: test_config.lua
test_systems/: UISystem.hpp
(+35 files in other folders)
